5.2.0

NEW
    - Added X and Y offset for tooltip if anchor is set to cursor
    - Update for 8.3


5.1.15

NEW
    - Added aggroborder to partyframes
    - Added option the set the Stancebar to the left or right of the Actionbar
    - Added more Battleground HUD's
    - Enhanced durability icon at hero panel 
    - Added timer to scenarios like Chromie

MISCELLANEOUS
    - Settings: Checkboxes now also toggle if click on the text

FIXES
    - Classpowerbar now changes if spec changed
    - If minimap is on top now all icons on the minimap are accessable


5.1.14

NEW
    - Added possibly to show more then one WQ
    - Added possibly to track WQ's
    - Added new skins

FIXES
    - Fix chatframe moving and resizing error


5.1.13

FIXES
    - Fix a loading error when action bars are disabled

5.1.12

NEW
    - Added new skins
    - Added heal prediction to party frames
    - Added casttime to target castbar

5.1.11

NEW
    - Added two new skins

FIXES
    - Fix a lua error with moving lootframe

5.1.10

NEW
    - Make lootframe moveable (if not hooked under mouse)
    - Added a "Skin"-Tab into settings

5.1.9

FIXES
    - Fix a error in ptBR and zhTW local

5.1.8

FIXES
    - Fix a position error with the MultiBarBottomRight

5.1.7

NEW
    - Added custom Loot frame
    - Added custom Gamemenu
    - Added custom Staticpopup
    - Added custom Ghost frame
    - Added some more custom frames like Dropdowns, etc.
    - Make XP-Bar as a module
    - Change range indicator for Multibars
    
MISCELLANEOUS
    - Tooltip now anchor to the bottom right of the Tooltip mover frame
    - Update locals (zhTW, ptBR)


5.1.6

MISCELLANEOUS
    - Disable toast messages
    - Change debuff position on target if target has no buffs


5.1.5

NEW
    - Added Welcome- and Changelog Page
    - Added Pixel Perfection Mode
    - Added Move HUD option for tooltips
    - Stancebuttons have own border
    - Temp weapon enchants are now shown as buff