@@ -469,6 +469,7 @@ GW_CHANGELOGS = "\nNEW\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "\n\n5.1.15\n\n" .. GW_CHANGELOGS
 
 --VERSION 5.2.0
+GW_CHANGELOGS = "   - Added healthprediction to target, target of target, focus and target of focus frame\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "   - Update for 8.3\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "   - Added X and Y offset for tooltip if anchor is set to cursor\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "\nNEW\n" .. GW_CHANGELOGS
